changed naming conventions for plots (all begin with gg_/gg-)

--- a/doc/intra-party-note.tex
+++ b/doc/intra-party-note.tex
@@ -67,20 +67,20 @@ Versions of these figures which exclude leaners will be made available both in t
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=.8\textwidth]{cdf-mean-ns.png}
-\caption{\label{fig:cdf-mean} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.}% Republicans tend to be colder in general.
+\includegraphics[width=.8\textwidth]{gg-mean-ns.png}
+\caption{\label{fig:gg-mean} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.}% Republicans tend to be colder in general.
 }}
 \end{figure}
-As shown in Figure \ref{fig:cdf-mean}, mean out party feeling thermometers for Democrats and Republicans have obviously declined. We also a see a decline in Republican's in party FTs since 2004, and only a slight decline in those of Democrats. Partisans remain much warmer (on average) towards their party than the opposition this---particularly in the case of Republicans---is in spite of a decline in average in-party FTs.
+As shown in Figure \ref{fig:gg-mean}, mean out party feeling thermometers for Democrats and Republicans have obviously declined. We also a see a decline in Republican's in party FTs since 2004, and only a slight decline in those of Democrats. Partisans remain much warmer (on average) towards their party than the opposition this---particularly in the case of Republicans---is in spite of a decline in average in-party FTs.
 
 \begin{wrapfigure}{R}{.8\textwidth}
 \centering
-\includegraphics[width=.75\textwidth]{cdf-sd-ns.png}
-\caption{\label{fig:cdf-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers as reported in the ANES, 1978--2016.} %After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.
+\includegraphics[width=.75\textwidth]{gg-sd-ns.png}
+\caption{\label{fig:gg-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers as reported in the ANES, 1978--2016.} %After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.
 } The magnitude of this increase is slight---increasing about 5 points from 2000 to 2016---but the parties are each}
 \end{wrapfigure}
 
-From 2004--2016 the variance of in-party Feeling thermometers has increased. the SD of Republicans' in-party FTs increased from 14--21 in this period, while Democrats' increased from 15--19. Alone, these numbers are not all that impressive, but as is made clear by Figure \ref{fig:cdf-sd}, an increase in variation of this magnitude has never before been observed, nor has the trend continued for so many years.
+From 2004--2016 the variance of in-party Feeling thermometers has increased. the SD of Republicans' in-party FTs increased from 14--21 in this period, while Democrats' increased from 15--19. Alone, these numbers are not all that impressive, but as is made clear by Figure \ref{fig:gg-sd}, an increase in variation of this magnitude has never before been observed, nor has the trend continued for so many years.
 
 As variance increases, so to has the proportion of partisans who rate their own party below a 50---a substantively meaningful threshold indicating that partisans are more cold than warm toward their own party. When leaning independents are included (following \citep{klar2016independent}), 10\% of Democrats and almost 20\% of Republicans are found to be cold towards their own party (up from 5\% each in 2004), while a sample which excludes leaning independents indicates 13\% of Republicans and 8\% of Democrats to be cold. Regardless of the cut-off point used to indicate cold affect, or the strength of partisans' identification with their party, the trend is robust---more partisans were cold to their party than has been observed at any point across the available data.
 
@@ -88,33 +88,26 @@ Negative evaluations of parties are increasingly common. The modal value of inde
 
 \begin{wrapfigure}{L}{.7\textwidth}
 \centering
-\includegraphics[width=.7\textwidth]{cdf-below-50-ns.png}
-\caption{\label{fig:cdf-below-50} \textit{\textbf{The proportion of partisans who whose in-party FT falls below 50.} %Republicans and Democrats increasingly report feeling colder than the median.
+\includegraphics[width=.7\textwidth]{gg-below-50-ns.png}
+\caption{\label{fig:gg-below-50} \textit{\textbf{The proportion of partisans who whose in-party FT falls below 50.} %Republicans and Democrats increasingly report feeling colder than the median.
 }}
 \end{wrapfigure}
 
-The increasing frequency of cold in-party affect is shown in Figure \ref{fig:cdf-below-50}. In 2004, less than 5\% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10\% of Democrats and almost 20\% of Republicans. This trend is robust across all strengths of partisan identification and regardless of the score we deem to indicate coldness. Additional figures will made available in the appendix.
+The increasing frequency of cold in-party affect is shown in Figure \ref{fig:gg-below-50}. In 2004, less than 5\% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10\% of Democrats and almost 20\% of Republicans. This trend is robust across all strengths of partisan identification and regardless of the score we deem to indicate coldness. Additional figures will made available in the appendix.
 
 Finally, Figure \ref{fig:ridge} displays changes in the distribution of in-party FTs over time. From 2004--2016, the left tail has grown noticeably longer and more dense. While the majority of partisans remain warmer than 50, these figures are striking.
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=1\textwidth]{cdf-ridge-grid.png}
+\includegraphics[width=1\textwidth]{gg-ridge-grid.png}
 \caption{\label{fig:ridge} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT.}}
 \end{figure}
 
 
 
-\section{Covariance}
+\section{Behavioral Differences}
 
-
-\begin{figure}{H!}
-\centering
-\includegraphics[width=.7\textwidth]{cdf-ridge-all-dis.png}
-\caption{\label{fig:ridge-dis} \textit{\textbf{Ridgeline plot of mean partisan feeling thermometers by reported satisfaction in democracy.} %Partisans' in-party/independents average FT. Plots show the distributions of mean partisan feeling thermometers---$(FT_D + FT_R)/2$---of those satisfied and dissatisfied with Democracy. Unsurprisingly, those dissatisfied are more likely to have a cold average FT
-}}
-\end{figure}
-
+Do 
 
 
 
@@ -147,23 +140,23 @@ To avoid unnecessary ambiguity that arises when discussing affect in terms of po
 % While affective polarization between partisans \textit{is} very high at present, there is also reason to be suspicious of internal divisions \textit{within} each party. \cite{mason2018ideologues} finds that, in addition to partisan identity, citizens hold ideological identities. In other words, individuals see themselves not just as ``Democrats" and ``Republicans", but as ``liberals" and ``conservatives". These  ideological and partisan identities are related to one another, but suggest that political identities which cross cut partisanship are theoretically plausible.
 %
 %%\begin{figure}[H]
-%%\center\includegraphics[width=6in]{cdf-npa.png}
-%%\caption{\label{fig:cdf-npa} \textit{\textbf{Democrats Net Partisan Affect Since 1978.} NPA has increased, but so has the variance. Subtracting in-party FT from out-party FT obscures variation occurring in each measure.}}
+%%\center\includegraphics[width=6in]{gg-npa.png}
+%%\caption{\label{fig:gg-npa} \textit{\textbf{Democrats Net Partisan Affect Since 1978.} NPA has increased, but so has the variance. Subtracting in-party FT from out-party FT obscures variation occurring in each measure.}}
 %%\end{figure}
 %\begin{figure}[H]
-%\center\includegraphics[width=5in]{cdf-avg.png}
-%\caption{\label{fig:cdf-avg}\textit{\textbf{Yearly mean of partisans' in-party and out-party feeling thermometers, 1978--2016.} Consistent with the extant literature (e.g., \citet{iyengar2012affect}, Democrat and Republican in-party FTs are consistently high (with a slight decrease since the first decade of the 2000s).}}
+%\center\includegraphics[width=5in]{gg-avg.png}
+%\caption{\label{fig:gg-avg}\textit{\textbf{Yearly mean of partisans' in-party and out-party feeling thermometers, 1978--2016.} Consistent with the extant literature (e.g., \citet{iyengar2012affect}, Democrat and Republican in-party FTs are consistently high (with a slight decrease since the first decade of the 2000s).}}
 %\end{figure}
-%\noindent Figure \ref{fig:cdf-avg} shows the average in-party and out-party feeling thermometer for Republicans and Democrats from 1978-2016. We clearly see out-party feeling thermometers scores decline; while the in-party remains relatively constant. This is true of both parties.
+%\noindent Figure \ref{fig:gg-avg} shows the average in-party and out-party feeling thermometer for Republicans and Democrats from 1978-2016. We clearly see out-party feeling thermometers scores decline; while the in-party remains relatively constant. This is true of both parties.
 %
-%Unfortunately reliance on annual means as a description of partisan affect paints too simple a picture. The standard deviation of the feeling thermometers, presented in figure \ref{fig:cdf-sd}, shows that the stability of mean in-party affect observed in Figure \ref{fig:cdf-avg} belies an increase in the variation around that mean. This variation has increased in each iteration of the survey since 2004, both Republicans and Democrats have become less cohesive in their feelings toward their own party than at any other time period for which we have data. It should be noted that, historically, partisans are less cohesive in their feelings towards the out-party, though the variance in intra-party affect now seems to be on par with out-party feelings. %Both figures \ref{fig:cdf-sd} and \ref{fig:cdf-avg}are reproduced in the Appendix using data from Democrat leaning independents, to similar results.
+%Unfortunately reliance on annual means as a description of partisan affect paints too simple a picture. The standard deviation of the feeling thermometers, presented in figure \ref{fig:gg-sd}, shows that the stability of mean in-party affect observed in Figure \ref{fig:gg-avg} belies an increase in the variation around that mean. This variation has increased in each iteration of the survey since 2004, both Republicans and Democrats have become less cohesive in their feelings toward their own party than at any other time period for which we have data. It should be noted that, historically, partisans are less cohesive in their feelings towards the out-party, though the variance in intra-party affect now seems to be on par with out-party feelings. %Both figures \ref{fig:gg-sd} and \ref{fig:gg-avg}are reproduced in the Appendix using data from Democrat leaning independents, to similar results.
 %
 %%%%%%%
 %
 %
 %\begin{figure}[H]
-%\center\includegraphics[width=5in]{cdf-sd.png}
-%\caption{\label{fig:cdf-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers, 1978--2016.} After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.}}
+%\center\includegraphics[width=5in]{gg-sd.png}
+%\caption{\label{fig:gg-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers, 1978--2016.} After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.}}
 %\end{figure}
 %%%%%%
 %
@@ -172,8 +165,8 @@ To avoid unnecessary ambiguity that arises when discussing affect in terms of po
 %The changes in variance observed above between 2004 and 2016, as well as 1978-2016 are robust to both the Levene's and Fligner-Killeen tests of homogeneity of variances. These tests evaluate the null hypothesis that the variance of a variable between two samples or groups is equal, and are robust to non-normally distributed data. Each tests rejects the null at $p<.05$ (precise p-values to be reported in the appendix).
 %
 %%\begin{figure}[H]
-%%\center\includegraphics[width=6in]{cdf-scatter-dem.png}
-%%\caption{\label{fig:cdf-scatter} \textit{\textbf{Scatterplots of Democrats' feeling thermometer scores toward the Democratic and Republican parties from 1978-2016.} Democrats have gotten more cold towards the Republican Party, but an increasing number are also cold towards \textit{both} parties.}}
+%%\center\includegraphics[width=6in]{gg-scatter-dem.png}
+%%\caption{\label{fig:gg-scatter} \textit{\textbf{Scatterplots of Democrats' feeling thermometer scores toward the Democratic and Republican parties from 1978-2016.} Democrats have gotten more cold towards the Republican Party, but an increasing number are also cold towards \textit{both} parties.}}
 %%\end{figure}
 %
 %%To visualize the variation described above, I scatterplot Democrats' feeling thermometers towards their in-party and out-party, across all available years. Consistent with the theoretical expectation of \cite{iyengar2012affect}, most respondents have clustered in the bottom right of the plot, indicating warmth towards the Democratic party and coldness towards the Republicans. However, in 2012 and 2016, we also see a striking number of respondents in the bottom left, reporting cold affect towards \textit{both} parties. 
