fixed a misnaming, recompiled doc

--- a/doc/intra-party-note.tex
+++ b/doc/intra-party-note.tex
@@ -107,7 +107,7 @@ Finally, Figure \ref{fig:ridge} displays changes in the distribution of in-party
 
 \section{Behavioral Differences}
 
-Do 
+Do Cold Partisans behave differently from warm partisans?
 
 
 
