--- a/doc/intra-party-note.tex
+++ b/doc/intra-party-note.tex
@@ -103,11 +103,16 @@ Finally, Figure \ref{fig:ridge} displays changes in the distribution of in-party
 \caption{\label{fig:ridge} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT.}}
 \end{figure}
 
-
-
 \section{Behavioral Differences}
 
+
 Do Cold Partisans behave differently from warm partisans?
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=.7\textwidth]{gg-pooled-combined-strict.png}
+\caption{\label{fig:ridge} \textit{\textbf{Normalized behavioral/opinion differences between cold and warm partisans.} Despite being pessimistic about the efficacy of government, cold partisans participate in politics at similar rates to warm co-partisans---though they vote for different candidates.}}
+\end{figure}
 
 
 
