--- a/doc/intra-party-note-latex.tex
+++ b/doc/intra-party-note-latex.tex
@@ -22,12 +22,13 @@
 %"In New York, it isn't between Democrat and Republican, it's between top and down"
 \begin{document}
 
-\title{Distribution of Disdain}
+\title{Not Homogeneous: Intra-party affect}
 \author{Robert Lytle}
 \date{\today}
 \maketitle
-%\epigraph{This is not the Republicans vs the Democrats---this is the elites of the Republican and Democratic party who have driven this country into the ditch vs Donald J. Trump and the Rest of America.}{\textit{Roger Stone (Get Me Roger Stone)}}
-%\epigraph{Establishment power in Washington is not always centered around left versus right. Often, it’s about up versus down.}{\textit{Alexandria Ocasio-Cortez}}
+\epigraph{This is not the Republicans vs the Democrats---this is the elites of the Republican and Democratic party who have driven this country into the ditch vs Donald J. Trump and the Rest of America.}{\textit{Roger Stone %(Get Me Roger Stone)
+}}
+\epigraph{Establishment power in Washington is not always centered around left versus right. Often, it’s about up versus down.}{\textit{Alexandria Ocasio-Cortez}}
 %\epigraph{The beauty of the tea party movement is that it is independent and thus a true check and balance of the Republican and Democrat parties. It's not a pawn of the GOP, thus untouchable in criticism of the Democrats---I view it as an unattached conscience of the Republican party.}{\textit{Dana Loesch}}
 \setstretch{2}
 %\thispagestyle{empty}
@@ -35,22 +36,46 @@
 %\setstretch{1}
 
 
-% Say something about why
+%Previous studies of affective polarization (e.g. \citet{iyengar2012affect}) have  focused on partisans' net partisan affect, this approach is problematic. When using a measure built from both in party and out party evaluations, it is not clear whether a change in NPA is borne of a change in in-party or out-party feeling. For example, the mean out-party affect of Republicans and Democrats in 2016 were each about 25 (Figure \ref{fig:cdf-mean}), but Republicans' NPA was significantly lower than Democrats' (Figure \ref{fig:cdf-npa}). Ostensibly, Republicans were \textit{less} polarized than Democrats, but to say so belies the fact that Republicans are very cold towards Democrats, they are just somewhat colder towards \textit{their own} party as well.
+%\begin{figure}[H]
+%\center\includegraphics[width=5in]{cdf-npa-ns.png}
+%\caption{\label{fig:cdf-npa} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.} Republicans tend to be colder in general.}}
+%\end{figure}
 
-% Mason: I disrespectfully Agree
+In the last decade, factions like the Tea Party and alt-right in the Republican Party and Progressives and Democratic Socialists in the Democratic party have presented challenges to their party's status-quo. While factions like the ``Blue Dog Democrats" or ``Main Street Republicans" are nothing new and have long communicated a brand \textit{separate} from their party \citep{clarke2017party}, the brand being communicated has not necessarily been hostile to mainline party elites. The same cannot be said for more recently appearing caucuses like the Democratic Socialists or the Tea Party. Candidates from these factions often explicitly position themselves as adversarial to established, mainstream members of their party, challenging ``establishment" representatives in primary battles and expressing dissatisfaction with or open hostility towards party leaders.
 
-% So few political scientists do a good job of telling us what the data looks like
+There is evidence that the divisions between elite co-partisans are meaningful at the mass level as well. Using the case 2016 Democratic primary \cite{wronski2018tale} demonstrate that Democrats in 2016 primary were divided along authoritarian lines. Primary voters scoring high in authoritarian personality traits were more likely to support Hillary Clinton---those with few authoritarian tendencies were likely to be supporters of Bernie Sanders. [add more]
 
-% Trust in government/ right/wrong track
+Across this backdrop of apparent intra-party division partisans' as identified by \cite{klar2018affective}, since 2004 not only has warmth towards the out-party declined but---particularly for Republicans---in party warmth as well. As in-party affect declines, so too has the role of positive partisanship (attachment to ones own party) been supplanted by hostility towards the out-party as a predictor of voting behavior\cite{iyengar2018strengthening}. With this research note, I describe in detail how the distribution of mass-level partisan affect has shifted to provide context for the above findings. I close by discussing the implications of this shift and suggest avenues for future research.
+
 \section{Introduction}
 
-The increasing affective partisan polarization since the mid-\nth{20} century is well documented (\citealp{ahler2018parties, iyengar2012affect, iyengar2018strengthening, mason2018ideologues}). In accounts of partisan affect, positive feelings (warmth) towards the in-party are generally assumed to be high (e.g. \citealp{iyengar2012affect}). In this short article I show that partisans are becoming colder towards their parties (as identified by \citealp{klar2018affective}), and that this decline is accompanied by an increasingly heterogeneous distribution of in-party affect.
 
-%In the last decade, factions like the Tea Party and alt-right in the Republican Party and Progressives and Democratic Socialists in the Democratic party have presented challenges to their party's status-quo. While factions like the ``Blue Dog Democrats" or ``Main Street Republicans" are nothing new and have long communicated a brand \textit{separate} from their party \citep{clarke2017party}, the brand being communicated has not necessarily been hostile to mainline party elites. The same cannot be said for more recently appearing caucuses like the Democratic Socialists or the Tea Party. Candidates from these factions often explicitly position themselves as adversarial to established, mainstream members of their party, challenging ``establishment" representatives in primary battles and expressing dissatisfaction with or open hostility towards party leaders.
 
-%There is evidence that the divisions between elite co-partisans are meaningful at the mass level as well. Using the case 2016 Democratic primary \cite{wronski2018tale} demonstrate that Democrats in 2016 primary were divided along authoritarian lines. Primary voters scoring high in authoritarian personality traits were more likely to support Hillary Clinton---those with few authoritarian tendencies were likely to be supporters of Bernie Sanders. [add more]
+Clinton supporters' posture towards their party in 2016 bore little semblance to that of the '08 race. Bernie Sanders---a former independent and self-identified socialist---leaned into the role of an insurgent, anti-establishment candidate and predicating his campaign on a conflict between the working-class and the elites of both major parties. Sanders supporters, angry with the DNC and reluctant to support Clinton in November led a losely organized movement of Democratic party discontents to found groups like \textit{Justice Democrats} and expand membership of organizations like the \textit{Democratic Socialists of America} and various state and local progressive caucues to protest alleged slights by the party establishment and support further left and anti-establishment downballot candidates. In the 2016 ANES time-series survey, Sanders supporters were about 20 points colder towards the Democratic party on a 100-point feeling thermometer than their Clinton supporting co-partisans.
 
-%Across this backdrop of apparent intra-party division partisans' as identified by \cite{klar2018affective}, since 2004 not only has warmth towards the out-party declined but---particularly for Republicans---in party warmth as well. As in-party affect declines, so too has the role of positive partisanship (attachment to ones own party) been supplanted by hostility towards the out-party as a predictor of voting behavior\cite{iyengar2018strengthening}. With this research note, I describe in detail how the distribution of mass-level partisan affect has shifted to provide context for the above findings. I close by discussing the implications of this shift and suggest avenues for future research.
+This is not particularly surprising on its own. Sanders campaigned against the party establishment---it follows that he would attract those disillusioned with the party. The story is more complicated. Republican supporters of Donald Trump---who's campaign even more explicitly, exuberantly hostile towards the Republican party---were warmer towards their party than any other candidates' supporters, despite the mutual hostility between Trump and established Republican elites.
+
+In 2008, despite her roll as Democratic standard-bearer (a role which \textit{should} have enticed more enthusiastic Democrats to her camp in the primaries) Clinton's defeat by Barack Obama in June of 2008 (much like Bernie Sanders' defeat in 2016) spawned the ``Party Unity My Ass" movement, engaging in various forms of protest against the DNC and pledging \textit{en masse} not to support the (relative) party outsider Barack Obama in the general election\footnote{\url{https://www.washingtonpost.com/wp-dyn/content/article/2008/06/26/AR2008062604162_pf.html}}. The average in-party thermometer for Clinton voters was about about 10 points lower than that of Obama supporters' in '08, or indeed \textit{Clinton} Supporters in 2016.
+
+It is likely that anti-establishment or outsider candidates should attract the support of disillusioned or alienated voters but the descriptive features of these recent cases suggest a second process whereby a candidate's victory or defeat in a primary causes an increase or decrease in their supporters' affect towards the party; explaining the tepid enthusiasm for the Democratic party amongst Hillary supporters in 2008 and the intense warmth felt by Trump supporters for their party in 2016.
+
+In the remainder of this study, I characterize long-term 
+
+
+Affective and social distance between Democrats and Republicans has expanded dramatically. Scholars of affective polarization have largely considered partisans to be warm towards their parties and co-partisans and cold to members of the out party \citep{iyengar2012affect, iyengar2018strengthening}.
+
+
+%Not super happy with "midst of disagreements"
+Recent developments give us cause, however, to doubt the consistency of in-party warmth; Factions in both parties have received a great deal of attention in recent years. Groups like the Tea Party and alt-right in the Republican Party and progressives and socialists in the Democratic party have presented challenges to their party's status-quo, often acting in opposition to their party's elites [CITE]. In the midst of these in-party disagreements the 2016 and 2020 election cycles have been characterized by lengthy and contentious primary elections. There has been no shortage of media accounts describing chaos at party conventions [CITE] and increasingly salient divides between populist and establishment wings of both parties [CITE]. 
+
+Using the 2016 Democratic primary \cite{wronski2018tale} demonstrate that Democrats in 2016 primary were divided along autoritarian lines. Primary voters scoring high in authoritarian personality traits were more likely to support Hillary Clinton---those with few authoritarian tendencies were likely to be supporters of Bernie Sanders. For example, \cite{iyengar2018strengthening} find that the strength of partisans' out-party animus has supplanted in-party warmth as a predictor of voting behavior. 
+
+%Rohde (1991) elite heterogeneity decreases salience of party ID
+%ask Dr. Bankert if okay to \cite{bankert2020authoritarian}
+
+
+By focusing on mean in-party feeling---rather than the distribution of partisan affect---researchers paint too optimistic a view of partisanship's strength. My findings bolster those of  \cite{klar2018affective}---partisan warmth has declined across the board.
 
 %When the dependent variable in studies of polarization includes by default feelings towards the in-party, it becomes impossible to study how the effects of in-party feelings themselves have changed over time, or even to determine if they have any effect at all.
 
@@ -58,29 +83,27 @@ The increasing affective partisan polarization since the mid-\nth{20} century is
 
 \section{Data}
 
-The data from this study were taken from the American National Election Study Cumulative Data File\footnote{https://electionstudies.org/data-center/anes-time-series-cumulative-data-file/}. All data and replication materials will be made available on GitHub. Following\citep{klar2016independent}, the data used here \textit{include} partisan leaning independents as members of the party towards which they lean.
-%\footnote{The upper left corner of each figure indicates whether leaning independents were included in the sample.This will certainly change before the paper is finished, I've generated figs for both and have been going back and forth}.
-Versions of these figures which exclude leaners will be made available both in the appendix and on GitHub. Importantly, the topline finding is robust regardless of who is considered a partisan: \textbf{An increasing number of Democrats and Republicans, voters and nonvoters, and partisans and non-partisans are lukewarm or cold---not just towards an out-party but towards both major parties.} 
+The data from this study were taken from the American National Election Study Cumulative Data File\footnote{https://electionstudies.org/data-center/anes-time-series-cumulative-data-file/}. All data and replication materials will be made available on GitHub. Some figures have been built using samples \textit{including} leaning partisans, while others \textit{exclude} leaning partisans, despite the evidence that partisan leaning independents behave in much the same way as their sorted counterparts \citep{klar2016independent}\footnote{The upper left corner of each figure indicates whether leaning independents were included in the sample.This will certainly change before the paper is finished, I've generated figs for both and have been going back and forth}. By restricting the sample to avowed partisans, I am likely underestimating the variation/animosity present in in-party attitudes, and overestimating the proportion of Democrat and Republican voters who are lukewarm or ambivalent towards their party. Regardless of the samples used, the topline finding is the same: \textbf{An increasing number of Democrats and Republicans, voters and nonvoters, and partisans and non-partisans are lukewarm or cold---not just towards an out-party but towards both major parties.}
 
 
-\section{Descriptives}
+\section{Results}
 
-\begin{figure}[h]
+\begin{figure}[H]
 \centering
 \includegraphics[width=.8\textwidth]{gg-mean-ns.png}
-\caption{\label{fig:gg-mean} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.}% Republicans tend to be colder in general.
+\caption{\label{fig:cdf-mean} \textit{\textbf{Mean of Partisans' in-party and out-party feeling thermometers as reported in the ANES, 1978--2016.}% Republicans tend to be colder in general.
 }}
 \end{figure}
-As shown in Figure \ref{fig:gg-mean}, mean out party feeling thermometers for Democrats and Republicans have obviously declined. We also a see a decline in Republican's in party FTs since 2004, and only a slight decline in those of Democrats. Partisans remain much warmer (on average) towards their party than the opposition this---particularly in the case of Republicans---is in spite of a decline in average in-party FTs.
+As shown in Figure \ref{fig:cdf-mean}, mean out party feeling thermometers for Democrats and Republicans have obviously declined. We also a see a decline in Republican's in party FTs since 2004, and only a slight decline in those of Democrats. Partisans remain much warmer (on average) towards their party than the opposition this---particularly in the case of Republicans---is in spite of a decline in average in-party FTs.
 
 \begin{wrapfigure}{R}{.8\textwidth}
 \centering
 \includegraphics[width=.75\textwidth]{gg-sd-ns.png}
-\caption{\label{fig:gg-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers as reported in the ANES, 1978--2016.} %After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.
-} The magnitude of this increase is slight---increasing about 5 points from 2000 to 2016---but the parties are each}
+\caption{\label{fig:cdf-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers as reported in the ANES, 1978--2016.} %After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.
+}}
 \end{wrapfigure}
 
-From 2004--2016 the variance of in-party Feeling thermometers has increased. the SD of Republicans' in-party FTs increased from 14--21 in this period, while Democrats' increased from 15--19. Alone, these numbers are not all that impressive, but as is made clear by Figure \ref{fig:gg-sd}, an increase in variation of this magnitude has never before been observed, nor has the trend continued for so many years.
+From 2004--2016 the variance of in-party Feeling thermometers has increased. the SD of Republicans' in-party FTs increased from 14--21 in this period, while Democrats' increased from 15--19. Alone, these numbers are not all that impressive, but as is made clear by Figure \ref{fig:cdf-sd}, an increase in variation of this magnitude has never before been observed, nor has the trend continued for so many years.
 
 As variance increases, so to has the proportion of partisans who rate their own party below a 50---a substantively meaningful threshold indicating that partisans are more cold than warm toward their own party. When leaning independents are included (following \citep{klar2016independent}), 10\% of Democrats and almost 20\% of Republicans are found to be cold towards their own party (up from 5\% each in 2004), while a sample which excludes leaning independents indicates 13\% of Republicans and 8\% of Democrats to be cold. Regardless of the cut-off point used to indicate cold affect, or the strength of partisans' identification with their party, the trend is robust---more partisans were cold to their party than has been observed at any point across the available data.
 
@@ -88,36 +111,80 @@ Negative evaluations of parties are increasingly common. The modal value of inde
 
 \begin{wrapfigure}{L}{.7\textwidth}
 \centering
-\includegraphics[width=.7\textwidth]{gg-below-50-ns.png}
-\caption{\label{fig:gg-below-50} \textit{\textbf{The proportion of partisans who whose in-party FT falls below 50.} %Republicans and Democrats increasingly report feeling colder than the median.
+\includegraphics[width=.7\textwidth]{cdf-below-50-ns.png}
+\caption{\label{fig:cdf-below-50} \textit{\textbf{The proportion of partisans who whose in-party FT falls below 50.} %Republicans and Democrats increasingly report feeling colder than the median.
 }}
 \end{wrapfigure}
 
-The increasing frequency of cold in-party affect is shown in Figure \ref{fig:gg-below-50}. In 2004, less than 5\% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10\% of Democrats and almost 20\% of Republicans. This trend is robust across all strengths of partisan identification and regardless of the score we deem to indicate coldness. Additional figures will made available in the appendix.
+The increasing frequency of cold in-party affect is shown in Figure \ref{fig:cdf-below-50}. In 2004, less than 5\% of Republicans and Democrats were cold toward their party, in 2016 that number increased to 10\% of Democrats and almost 20\% of Republicans. This trend is robust across all strengths of partisan identification and regardless of the score we deem to indicate coldness. Additional figures will made available in the appendix.
+
+
 
 Finally, Figure \ref{fig:ridge} displays changes in the distribution of in-party FTs over time. From 2004--2016, the left tail has grown noticeably longer and more dense. While the majority of partisans remain warmer than 50, these figures are striking.
 
-\begin{figure}[H]
+\begin{wrapfigure}{R}{.6\textwidth}
 \centering
-\includegraphics[width=1\textwidth]{gg-ridge-grid.png}
+\includegraphics[width=.6\textwidth]{cdf-ridge-ns.png}
 \caption{\label{fig:ridge} \textit{\textbf{Ridgeline plot of partisan feeling thermometers.} Partisans' in-party/independents average FT.}}
-\end{figure}
-
-\section{Behavioral Differences}
+\end{wrapfigure}
 
 
-Do Cold Partisans behave differently from warm partisans?
+\subsection{Dissatisfaction}
 
-\begin{figure}[H]
+The findings presented here support the view of \cite{klar2018affective}, that the pattern of  affective partisan polarization identified in recent years (e.g. \citet{iyengar2012affect}), is better characterized as increasing frustration with political parties in general---not simple polarization. It is true that antipathy towards the outparty has increased since the 1970s, but so to has the proportion of those who are lukewarm or cold toward their own party.
+
+This raises troubling normative concerns regarding citizens' faith in democracy. By the ANES's measure, the proportion of people ``Somewhat" or ``Very" dissatisfied with democracy has increased from about 18\% in 2004 (the first year the question was asked), to 34\% in 2012 and 2016.
+
+\begin{wrapfigure}{R}{.7\textwidth}
 \centering
-\includegraphics[width=.7\textwidth]{gg-pooled-combined-strict.png}
-\caption{\label{fig:ridge} \textit{\textbf{Normalized behavioral/opinion differences between cold and warm partisans.} Despite being pessimistic about the efficacy of government, cold partisans participate in politics at similar rates to warm co-partisans---though they vote for different candidates.}}
+\includegraphics[width=.7\textwidth]{cdf-ridge-grid.png}
+\caption{\label{fig:ridge-dis} \textit{\textbf{Ridgeline plot of mean partisan feeling thermometers by reported satisfaction in democracy.} %Partisans' in-party/independents average FT. Plots show the distributions of mean partisan feeling thermometers---$(FT_D + FT_R)/2$---of those satisfied and dissatisfied with Democracy. Unsurprisingly, those dissatisfied are more likely to have a cold average FT
+}}
+\end{wrapfigure}
+
+Figure \ref{fig:ridge-dis} shows all respondents' mean partisan feeling thermometer (the average of their Democrat and Republican thermometers), stratified by whether the respondent is satisfied or dissatisfied with Democracy. Unsurprisingly, the leftward tails are largest among discontents, but all three groups (satisfied, dissatisfied, and those who weren't sure or declined to answer) have become increasingly likely to be, an average, cold towards the parties.
+
+\subsection{Primaries}
+Setting aside issues of causal identification, clearly increasing dissatisfaction with democracy does not fully explain  the increase in those who are cold toward their (or both) parties\footnote{Nor does cold partisan affect explain all increasing dissatisfaction.}. I turn now to an examination of the relationship between primary vote choice and in-party affect. I argue that the increase in cold partisan affect can be explained in part by ``sore losers" in primary elections---as primaries become more salient, so to do the factions represented by supporters of particular candidates. In short, primary elections provide another layer of group-based political identity below the party, forcing partisans to see not just the out-party as adversarial, but members of their own party as well.
+
+\begin{wrapfigure}{R}{.75\textwidth}
+\centering
+\includegraphics[width=.7\textwidth]{gg-primary-in-hist.png}
+\caption{\label{fig:primary-dem} \textit{\textbf{Density plots of in-party feeling thermometers by year and primary candidate preference.}}}
+\end{wrapfigure}
+ Primary elections are substantively significant events, allowing partisans a voice in the presentation and direction of their party. In a political environment in which the presidential nominee becomes the de facto leader of the party, the primary process affords non-elite voters a voice in the ideological, political, and stylistic future of the party. The political products offered by primary candidates may reflect (or drive) extant divisions in the party. \cite{wronski2018tale} and \cite{bankert2020authoritarian} find that those scoring highly on measures authoritarian personality traits use their primary vote to ``protect" their party from factions they see as threatening group cohesion. Just as voters do not toss a coin to decide their general election vote, they do not randomly select their choice in the primary; these choices are likely to be meaningful. 
+
+Figure \ref{fig:primary-dem} shows density plots of Democrats' in-party feeling thermometers in 2008 and 2016 in each year, in both years, those who supported a losing candidate were more more likely to be cold to their party than even non-voters. One might suspect a reverse causal relationship---that the 2016 data are a product of Sanders supporters' predisposition against their party. While some Sanders supporters were no doubt motivated by an \textit{a priori} disdain for the establishment, note the large number of lukewarm Clinton Democrats relative to both Obama supporters and nonvoters. It would be difficult to imagine a more establishment Democrat than Hillary Clinton running against Obama---then a young senator promising to upset the status-quo.
+
+On the Republican side, the Trump campaign postured itself as openly hostile to the Republican party, perhaps even to a greater degree than did the Sanders campaign against the Democrats. Despite this, Trump supporters were the warmest group of Republican primary voters\footnote{[Figs will be updated to include reps]}---bad news for our \textit{a priori} disdain hypothesis---and good news for the sore loser hypothesis.
+
+
+
+\subsubsection{Panel Data}
+
+\begin{figure}
+\centering
+\includegraphics[width=1\textwidth]{gg-partisan-loess-08.png}
+\caption{\label{fig:loess} \textit{\textbf{LOESS model estimating probability of self-identifying as a strong partisan}}}
 \end{figure}
 
+Based on cross-sectional data alone it is unclear whether vote choice or a cold affect is prior to the other. Using panel data from the 2000 and 2008 presidential elections
+
+%The main lesson of this study to scholars of political polarization should be the importance of clearly conceptualizing what is substantively important about polarization, and understanding the methodological trade-offs that occur when too much is built in to our dependent-variable models of polarization. The tacit (or explicit) assumption that in-party feelings are necessarily high when out-party feelings are low should be put to rest.
+
+%Given that partisans feelings towards their own party are not necessarily predictive of their feeling toward the opposing party, political scientists hould carefully consider what substantive questions they are interested in asking when justifying a choice of dependent variable, recognizing that choice can limit the number of questions which can be asked, and obscure potential insights.
+
+%If scholars' interest in affective polarization is truly in the distance between partisans' assessments of themselves and their opponents, a measure like net partisan affective is appropriate. If, however, the researcher's interest is in the absolute political hostility or animus \textit{implied} by that distance, they should simply use partisan's direct feelings towards their enemies. There is no reason for those in the latter camp to run the risk of overcomplicating an analysis or confounding an interesting result by including in their measure a variable unrelated to their interests.
+%\subsection{Research Design Concerns and Limitations}
+%\begin{figure}[H]
+%\center\includegraphics[width=6in]{therm-hist-2016.png}
+%\caption{\label{fig:dens}\textit{Density plots of net partisan affect by vote in primary elections}.}
+%\end{figure}
+
+%These data are obviously quite limited, looking at members of one party across two years, but they should motivate additional research.
 
 
-\section{Discussion}
-To avoid unnecessary ambiguity that arises when discussing affect in terms of polarization, I have opted to present 
+%compare decrease in NPA of losers to average NPA decrease of losers.
 
 
 
@@ -145,23 +212,23 @@ To avoid unnecessary ambiguity that arises when discussing affect in terms of po
 % While affective polarization between partisans \textit{is} very high at present, there is also reason to be suspicious of internal divisions \textit{within} each party. \cite{mason2018ideologues} finds that, in addition to partisan identity, citizens hold ideological identities. In other words, individuals see themselves not just as ``Democrats" and ``Republicans", but as ``liberals" and ``conservatives". These  ideological and partisan identities are related to one another, but suggest that political identities which cross cut partisanship are theoretically plausible.
 %
 %%\begin{figure}[H]
-%%\center\includegraphics[width=6in]{gg-npa.png}
-%%\caption{\label{fig:gg-npa} \textit{\textbf{Democrats Net Partisan Affect Since 1978.} NPA has increased, but so has the variance. Subtracting in-party FT from out-party FT obscures variation occurring in each measure.}}
+%%\center\includegraphics[width=6in]{cdf-npa.png}
+%%\caption{\label{fig:cdf-npa} \textit{\textbf{Democrats Net Partisan Affect Since 1978.} NPA has increased, but so has the variance. Subtracting in-party FT from out-party FT obscures variation occurring in each measure.}}
 %%\end{figure}
 %\begin{figure}[H]
-%\center\includegraphics[width=5in]{gg-avg.png}
-%\caption{\label{fig:gg-avg}\textit{\textbf{Yearly mean of partisans' in-party and out-party feeling thermometers, 1978--2016.} Consistent with the extant literature (e.g., \citet{iyengar2012affect}, Democrat and Republican in-party FTs are consistently high (with a slight decrease since the first decade of the 2000s).}}
+%\center\includegraphics[width=5in]{cdf-avg.png}
+%\caption{\label{fig:cdf-avg}\textit{\textbf{Yearly mean of partisans' in-party and out-party feeling thermometers, 1978--2016.} Consistent with the extant literature (e.g., \citet{iyengar2012affect}, Democrat and Republican in-party FTs are consistently high (with a slight decrease since the first decade of the 2000s).}}
 %\end{figure}
-%\noindent Figure \ref{fig:gg-avg} shows the average in-party and out-party feeling thermometer for Republicans and Democrats from 1978-2016. We clearly see out-party feeling thermometers scores decline; while the in-party remains relatively constant. This is true of both parties.
+%\noindent Figure \ref{fig:cdf-avg} shows the average in-party and out-party feeling thermometer for Republicans and Democrats from 1978-2016. We clearly see out-party feeling thermometers scores decline; while the in-party remains relatively constant. This is true of both parties.
 %
-%Unfortunately reliance on annual means as a description of partisan affect paints too simple a picture. The standard deviation of the feeling thermometers, presented in figure \ref{fig:gg-sd}, shows that the stability of mean in-party affect observed in Figure \ref{fig:gg-avg} belies an increase in the variation around that mean. This variation has increased in each iteration of the survey since 2004, both Republicans and Democrats have become less cohesive in their feelings toward their own party than at any other time period for which we have data. It should be noted that, historically, partisans are less cohesive in their feelings towards the out-party, though the variance in intra-party affect now seems to be on par with out-party feelings. %Both figures \ref{fig:gg-sd} and \ref{fig:gg-avg}are reproduced in the Appendix using data from Democrat leaning independents, to similar results.
+%Unfortunately reliance on annual means as a description of partisan affect paints too simple a picture. The standard deviation of the feeling thermometers, presented in figure \ref{fig:cdf-sd}, shows that the stability of mean in-party affect observed in Figure \ref{fig:cdf-avg} belies an increase in the variation around that mean. This variation has increased in each iteration of the survey since 2004, both Republicans and Democrats have become less cohesive in their feelings toward their own party than at any other time period for which we have data. It should be noted that, historically, partisans are less cohesive in their feelings towards the out-party, though the variance in intra-party affect now seems to be on par with out-party feelings. %Both figures \ref{fig:cdf-sd} and \ref{fig:cdf-avg}are reproduced in the Appendix using data from Democrat leaning independents, to similar results.
 %
 %%%%%%%
 %
 %
 %\begin{figure}[H]
-%\center\includegraphics[width=5in]{gg-sd.png}
-%\caption{\label{fig:gg-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers, 1978--2016.} After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.}}
+%\center\includegraphics[width=5in]{cdf-sd.png}
+%\caption{\label{fig:cdf-sd} \textit{\textbf{Standard Deviation of partisans' in party feeling thermometers, 1978--2016.} After several decades of minimal change, the variation in in-party feeling thermometer ratings increased substantially between 2004 and 2016. This change is robust to both the Fligner-Killeen and Levene's tests of homogeneity of variance.}}
 %\end{figure}
 %%%%%%
 %
@@ -170,8 +237,8 @@ To avoid unnecessary ambiguity that arises when discussing affect in terms of po
 %The changes in variance observed above between 2004 and 2016, as well as 1978-2016 are robust to both the Levene's and Fligner-Killeen tests of homogeneity of variances. These tests evaluate the null hypothesis that the variance of a variable between two samples or groups is equal, and are robust to non-normally distributed data. Each tests rejects the null at $p<.05$ (precise p-values to be reported in the appendix).
 %
 %%\begin{figure}[H]
-%%\center\includegraphics[width=6in]{gg-scatter-dem.png}
-%%\caption{\label{fig:gg-scatter} \textit{\textbf{Scatterplots of Democrats' feeling thermometer scores toward the Democratic and Republican parties from 1978-2016.} Democrats have gotten more cold towards the Republican Party, but an increasing number are also cold towards \textit{both} parties.}}
+%%\center\includegraphics[width=6in]{cdf-scatter-dem.png}
+%%\caption{\label{fig:cdf-scatter} \textit{\textbf{Scatterplots of Democrats' feeling thermometer scores toward the Democratic and Republican parties from 1978-2016.} Democrats have gotten more cold towards the Republican Party, but an increasing number are also cold towards \textit{both} parties.}}
 %%\end{figure}
 %
 %%To visualize the variation described above, I scatterplot Democrats' feeling thermometers towards their in-party and out-party, across all available years. Consistent with the theoretical expectation of \cite{iyengar2012affect}, most respondents have clustered in the bottom right of the plot, indicating warmth towards the Democratic party and coldness towards the Republicans. However, in 2012 and 2016, we also see a striking number of respondents in the bottom left, reporting cold affect towards \textit{both} parties. 
@@ -271,5 +338,3 @@ To avoid unnecessary ambiguity that arises when discussing affect in terms of po
 %In addition to this concern, there is the possibility of over control bias when evaluating the effect of policy preferences on affect, as policy preferences are often endogenous to party ID \citep{druckman2013elite}\footnote{This is also acknowledged in the footnotes on page 422 of \citeauthor{iyengar2012affect}.} This case is not alarming however, as party ID was not included as a variable when regressing affect on policy preferences. While the authors' articulation of their causal claim is problematic, their core descriptive claim (that the United States has increasingly affectively polarized since the mid-\nth{20} century) is unaffected by these problems.
 
 \end{document}
-
-%
