--- a/doc/references.bib
+++ b/doc/references.bib
@@ -1,5 +1,5 @@
 @article{klar2018affective,
-  title={Affective polarization or partisan disdain? Untangling a dislike for the opposing party from a dislike of partisanship},
+  title={Affective Polarization or Partisan Disdain? Untangling a Dislike for the Opposing Party from a Dislike of Partisanship},
   author={Klar, Samara and Krupnikov, Yanna and Ryan, John Barry},
   journal={Public Opinion Quarterly},
   volume={82},
@@ -7,6 +7,13 @@
   pages={379--390},
   year={2018},
   publisher={Oxford University Press US}
+}
+
+@book{lenz2013follow,
+  title={Follow the leader?: How Voters Respond to Politicians' Policies and Performance},
+  author={Lenz, Gabriel S},
+  year={2013},
+  publisher={University of Chicago Press}
 }
 
 @article{clarke2017party,
